Grace/tests/gibbs/errors/t294.grace
// ERROR = P1018
method print(a)and(b,c) {}

print(42)and("Vogon",.)
